cmake_minimum_required(VERSION 3.19)
project(FarCry VERSION 1.0)

set(CMAKE_CXX_STANDARD 14)

set(OUTPUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/x64/Build")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_STATIC_LIBRARY_PREFIX "")

add_subdirectory(Cry3DEngine)
add_subdirectory(CryAISystem)
add_subdirectory(CryAnimation)
add_subdirectory(CryEntitySystem)
add_subdirectory(CryFont)
add_subdirectory(CryGame)
add_subdirectory(CryInput)
add_subdirectory(CryMovie)
add_subdirectory(CryNetwork)
add_subdirectory(CryPhysics)
add_subdirectory(CryScriptSystem)
add_subdirectory(CrySoundSystem)
add_subdirectory(CrySystem)
add_subdirectory(ResourceCompiler)
add_subdirectory(RenderDll/XRenderD3D9)
add_subdirectory(FARCRY)