add_library(Cry3DEngine STATIC
        "3dEngine.h"
        "Array2d.h"
        "BaseObj.h"
        "BasicArea.h"
        "Brush.h"
        "cbuffer.h"
        "Cry3DEngineBase.h"
        "CryStaticModel.h"
        "cvars.h"
        "dds.h"
        "DecalManager.h"
        "detail_grass.h"
        "File.h"
        "Geom.h"
        "Helper.h"
        "IndoorShadowVolumes.h"
        "IndoorVolumes.h"
        "Light.h"
        "LMSerializationManager2.h"
        "Node.h"
        "ObjMan.h"
        "ParticleEffect.h"
        "ParticleEmitter.h"
        "partman.h"
        "rain.h"
        "ShadowVolumeEdge.h"
        "StatObj.h"
        "StdAfx.h"
        "StencilShadowConnectivity.h"
        "StencilShadowConnectivityBuilder.h"
        "StencilShadowEdgeDetector.h"
        "terrain.h"
        "terrain_sector.h"
        "terrain_water.h"
        "Vegetation.h"
        "VisAreas.h"
        "WaterVolumes.h"
        "3dEngine.cpp"
        "3dEngineLight.cpp"
        "3dEngineLoad.cpp"
        "3dEngineRender.cpp"
        "3dEngineScreenEffects.cpp"
        "BasicArea.cpp"
        "Brush.cpp"
        "BrushLM.cpp"
        "cbuffer.cpp"
        "Cry3DEngine.cpp"
        "CryStaticModel.cpp"
        "cvars.cpp"
        "Decal.cpp"
        "DecalManager.cpp"
        "detail_grass.cpp"
        "File.cpp"
        "Geom.cpp"
        "Helper.cpp"
        "Light.cpp"
        "LightMan.cpp"
        "LMSerializationManager2.cpp"
        "MatMan.cpp"
        "Meshidx.cpp"
        "Node.cpp"
        "ObjMan.cpp"
        "ObjManDraw.cpp"
        "ObjManDrawEntity.cpp"
        "ObjManFar.cpp"
        "ObjManShadows.cpp"
        "ObjManStreaming.cpp"
        "particle.cpp"
        "ParticleEffect.cpp"
        "ParticleEmitter.cpp"
        "partman.cpp"
        "partpolygon.cpp"
        "rain.cpp"
        "SpriteManager.cpp"
        "StatObjCompiler.cpp"
        "StatObjConstr.cpp"
        "StatObjFar.cpp"
        "StatObjLoad.cpp"
        "StatObjPhys.cpp"
        "StatObjRend.cpp"
        "StatObjSerialize.cpp"
        "StatObjShadow.cpp"
        "StatObjShadowVolumes.cpp"
        "StatObjStream.cpp"
        "StdAfx.cpp"
        "StencilShadowConnectivityBuilder.cpp"
        "StencilShadowEdgeDetector.cpp"
        "terrain.cpp"
        "terrain_damage.cpp"
        "terrain_det_tex.cpp"
        "terrain_hmap.cpp"
        "terrain_init.cpp"
        "terrain_light.cpp"
        "terrain_load.cpp"
        "terrain_render.cpp"
        "terrain_sector.cpp"
        "terrain_sector_beach.cpp"
        "terrain_sector_render.cpp"
        "terrain_sector_tex.cpp"
        "terrain_tex_pool.cpp"
        "terrain_water_quad.cpp"
        "terran_edit.cpp"
        "Vegetation.cpp"
        "VisAreaMan.cpp"
        "VisAreas.cpp"
        "WaterVolumes.cpp"
)

target_link_libraries(Cry3DEngine PRIVATE CryCommon)
