add_library(CryAISystem SHARED
        "AIAttribute.cpp"
        "AIAutoBalance.cpp"
        "AIMemStats.cpp"
        "AIObject.cpp"
        "AIPlayer.cpp"
        "AIVehicle.cpp"
        "BuildingIDManager.cpp"
        "CAISystem.cpp"
        "CryAISystem.cpp"
        "CTriangulator.cpp"
        "Formation.cpp"
        "GoalOp.cpp"
        "GoalPipe.cpp"
        "Graph.cpp"
        "GraphUtility.cpp"
        "Heuristic.cpp"
        "IAgent.cpp"
        "PipeUser.cpp"
        "Puppet.cpp"
        "StdAfx.cpp"
        "VertexList.cpp"
        "AgentParams.h"
        "AIAttribute.h"
        "AIAutoBalance.h"
        "AIObject.h"
        "AIPlayer.h"
        "AIVehicle.h"
        "BuildingIDManager.h"
        "CAISystem.h"
        "CryAISystem.h"
        "CTriangulator.h"
        "Formation.h"
        "GoalOp.h"
        "GoalPipe.h"
        "Graph.h"
        "Heuristic.h"
        "PipeUser.h"
        "pointer_container.h"
        "Puppet.h"
        "StdAfx.h"
        "VertexList.h"
)

target_include_directories(CryAISystem PRIVATE ../CryCommon)
target_compile_definitions(CryAISystem PRIVATE _RELEASE NDEBUG WIN64 WIN32 _AMD64_ _WINDOWS _USRDLL CRYAISYSTEM_EXPORTS DONT_USE_CRY_MEMORY_MANAGER)
target_compile_options(CryAISystem PRIVATE "-fpermissive")
target_link_libraries(CryAISystem -static)