add_library(CryAISystem STATIC
        "AIAttribute.cpp"
        "AIAutoBalance.cpp"
        "AIMemStats.cpp"
        "AIObject.cpp"
        "AIPlayer.cpp"
        "AIVehicle.cpp"
        "BuildingIDManager.cpp"
        "CAISystem.cpp"
        "CryAISystem.cpp"
        "CTriangulator.cpp"
        "Formation.cpp"
        "GoalOp.cpp"
        "GoalPipe.cpp"
        "Graph.cpp"
        "GraphUtility.cpp"
        "Heuristic.cpp"
        "IAgent.cpp"
        "PipeUser.cpp"
        "Puppet.cpp"
        "StdAfx.cpp"
        "VertexList.cpp"
        "AgentParams.h"
        "AIAttribute.h"
        "AIAutoBalance.h"
        "AIObject.h"
        "AIPlayer.h"
        "AIVehicle.h"
        "BuildingIDManager.h"
        "CAISystem.h"
        "CryAISystem.h"
        "CTriangulator.h"
        "Formation.h"
        "GoalOp.h"
        "GoalPipe.h"
        "Graph.h"
        "Heuristic.h"
        "PipeUser.h"
        "pointer_container.h"
        "Puppet.h"
        "StdAfx.h"
        "VertexList.h"
)

target_link_libraries(CryAISystem CryCommon -static)