add_library(CryFont SHARED
        "CryFont.cpp"
        "CryPakIO.cpp"
        "FFont.cpp"
        "FFontXML.cpp"
        "FontRenderer.cpp"
        "FontTexture.cpp"
        "FreeType2/src/autohint/autohint.c"
        "FreeType2/src/base/ftbase.c"
        "FreeType2/src/base/ftbbox.c"
        "FreeType2/src/base/ftbdf.c"
        "FreeType2/src/base/ftdebug.c"
        "FreeType2/src/base/ftglyph.c"
        "FreeType2/src/base/ftinit.c"
        "FreeType2/src/base/ftmm.c"
        "FreeType2/src/base/ftpfr.c"
        "FreeType2/src/base/ftsystem.c"
        "FreeType2/src/base/ftwinfnt.c"
        "FreeType2/src/cache/ftcache.c"
        "FreeType2/src/psaux/psaux.c"
        "FreeType2/src/pshinter/pshinter.c"
        "FreeType2/src/psnames/psnames.c"
        "FreeType2/src/raster/raster.c"
        "FreeType2/src/sfnt/sfnt.c"
        "FreeType2/src/smooth/smooth.c"
        "FreeType2/src/truetype/truetype.c"
        "FreeType2/src/winfonts/winfnt.c"
        "GlyphBitmap.cpp"
        "GlyphCache.cpp"
        "ICryFont.cpp"
        "StdAfx.cpp"
        "CryFont.h"
        "CryPakIO.h"
        "FFont.h"
        "FontRenderer.h"
        "FontTexture.h"
        "GlyphBitmap.h"
        "GlyphCache.h"
        "StdAfx.h"
)

target_include_directories(CryFont PRIVATE ../CrytekDLL ../CryCommon FreeType2/include)
target_compile_definitions(CryFont PRIVATE _RELEASE NDEBUG WIN64 WIN32 _AMD64_ _WINDOWS _USRDLL CRYFONT_EXPORTS DONT_USE_CRY_MEMORY_MANAGER)
target_compile_options(CryFont PRIVATE "-fpermissive")