add_library(CryGame STATIC
        "AdvCamSystem.cpp"
        "AIHandler.cpp"
        "BitStream_Base.cpp"
        "BitStream_Compressed.cpp"
        "BugsFlock.cpp"
        "CryGame.cpp"
        "EntityClassRegistry.cpp"
        "Flock.cpp"
        "Game.cpp"
        "GameActionInput.cpp"
        "GameCallbacks.cpp"
        "GameClientServer.cpp"
        "GameDevMode.cpp"
        "GameEquipPacks.cpp"
        "GameEvents.cpp"
        "GameLoading.cpp"
        "GameMemStats.cpp"
        "GameMisc.cpp"
        "GameMods.cpp"
        "GameMovieUser.cpp"
        "GameRadar.cpp"
        "GameTagPoints.cpp"
        "IngameDialog.cpp"
        "NetEntityInfo.cpp"
        "ScriptObjectAdvCamSystem.cpp"
        "ScriptObjectAI.cpp"
        "ScriptObjectBoids.cpp"
        "ScriptObjectClient.cpp"
        "ScriptObjectGame.cpp"
        "ScriptObjectInput.cpp"
        "ScriptObjectLanguage.cpp"
        "ScriptObjectPlayer.cpp"
        "ScriptObjectRenderer.cpp"
        "ScriptObjectServer.cpp"
        "ScriptObjectServerSlot.cpp"
        "ScriptObjectSpectator.cpp"
        "ScriptObjectStream.cpp"
        "ScriptObjectSynched2DTable.cpp"
        "ScriptObjectUI.cpp"
        "ScriptObjectVehicle.cpp"
        "ScriptObjectWeaponClass.cpp"
        "ScriptTimerMgr.cpp"
        "Spectator.cpp"
        "StdAfx.cpp"
        "StringTableMgr.cpp"
        "Synched2DTable.cpp"
        "SynchedRandomSeed.cpp"
        "TimeDemoRecorder.cpp"
        "UIButton.cpp"
        "UICheckBox.cpp"
        "UIComboBox.cpp"
        "UICVars.cpp"
        "UIDivX_Video.cpp"
        "UIEditBox.cpp"
        "UIHud.cpp"
        "UIListView.cpp"
        "UIScreen.cpp"
        "UIScrollBar.cpp"
        "UIStatic.cpp"
        "UISystem.cpp"
        "UIVideoPanel.cpp"
        "UIWidget.cpp"
        "WeaponClass.cpp"
        "WeaponSystemEx.cpp"
        "XArea.cpp"
        "XClient.cpp"
        "XClientSnapshot.cpp"
        "XDemoMgr.cpp"
        "XEntityProcessingCmd.cpp"
        "XNetwork.cpp"
        "XNetworkStats.cpp"
        "XObjectProxy.cpp"
        "XPlayer.cpp"
        "XPlayerCamera.cpp"
        "XPlayerLight.cpp"
        "XplayerVehicle.cpp"
        "XPuppetProxy.cpp"
        "XServer.cpp"
        "XServerRules.cpp"
        "XServerSlot.cpp"
        "XSnapshot.cpp"
        "XSurfaceMgr.cpp"
        "XSystemBase.cpp"
        "XSystemClient.cpp"
        "XSystemDummy.cpp"
        "XSystemEntities.cpp"
        "XSystemServer.cpp"
        "XVehicle.cpp"
        "XVehicleProxy.cpp"
        "XVehicleProxyHeli.cpp"
        "XVehicleSystem.cpp"
        "AdvCamSystem.h"
        "AIHandler.h"
        "BitStream_Base.h"
        "BitStream_Compressed.h"
        "BugsFlock.h"
        "CMovieUser.h"
        "CryGame.h"
        "EntityClassRegistry.h"
        "FireType.h"
        "Flock.h"
        "Game.h"
        "GameMods.h"
        "GameObject.h"
        "GameShared.h"
        "IngameDialog.h"
        "IXSystem.h"
        "NetEntityInfo.h"
        "PlayerSystem.h"
        "ScriptObjectAdvCamSystem.h"
        "ScriptObjectAI.h"
        "ScriptObjectBoids.h"
        "ScriptObjectClient.h"
        "ScriptObjectGame.h"
        "ScriptObjectInput.h"
        "ScriptObjectLanguage.h"
        "ScriptObjectPlayer.h"
        "ScriptObjectRenderer.h"
        "ScriptObjectServer.h"
        "ScriptObjectServerSlot.h"
        "ScriptObjectSpectator.h"
        "ScriptObjectStream.h"
        "ScriptObjectSynched2DTable.h"
        "ScriptObjectUI.h"
        "ScriptObjectVehicle.h"
        "ScriptObjectWeaponClass.h"
        "ScriptTimerMgr.h"
        "Spectator.h"
        "StdAfx.h"
        "StringTableMgr.h"
        "Synched2DTable.h"
        "SynchedRandomSeed.h"
        "TagPoint.h"
        "TimeDemoRecorder.h"
        "UIButton.h"
        "UICheckBox.h"
        "UIComboBox.h"
        "UICVars.h"
        "UIDivX_Video.h"
        "UIEditBox.h"
        "UIHud.h"
        "UIListView.h"
        "UIMessages.h"
        "UIScreen.h"
        "UIScrollBar.h"
        "UIStatic.h"
        "UISystem.h"
        "UIVideoPanel.h"
        "UIWidget.h"
        "WeaponClass.h"
        "WeaponSystemEx.h"
        "XArea.h"
        "XClient.h"
        "XClientSnapshot.h"
        "XDemoMgr.h"
        "XEntityProcessingCmd.h"
        "XNetwork.h"
        "XNetworkStats.h"
        "XObjectProxy.h"
        "XPlayer.h"
        "XPuppetProxy.h"
        "XServer.h"
        "XServerRules.h"
        "XServerSlot.h"
        "XSnapshot.h"
        "XSurfaceMgr.h"
        "XSystemBase.h"
        "XSystemClient.h"
        "XSystemDummy.h"
        "XSystemEntities.h"
        "XSystemServer.h"
        "XVehicle.h"
        "XVehicleProxy.h"
        "XVehicleSystem.h"
)

target_link_libraries(CryGame CryCommon -static dxguid dsound imagehlp version ws2_32)