add_library(CryMovie SHARED
        "AnimCameraNode.cpp"
        "AnimNode.cpp"
        "AnimSequence.cpp"
        "AnimSplineTrack.cpp"
        "AnimTrack.cpp"
        "BoolTrack.cpp"
        "CharacterTrack.cpp"
        "ConsoleTrack.cpp"
        "CryMovie.cpp"
        "CVarNode.cpp"
        "EntityNode.cpp"
        "EventTrack.cpp"
        "ExprTrack.cpp"
        "MaterialNode.cpp"
        "Movie.cpp"
        "MusicTrack.cpp"
        "SceneNode.cpp"
        "ScriptVarNode.cpp"
        "SelectTrack.cpp"
        "SequenceIt.cpp"
        "SoundTrack.cpp"
        "StdAfx.cpp"
        "AnimCameraNode.h"
        "AnimNode.h"
        "AnimSequence.h"
        "AnimSplineTrack.h"
        "AnimTrack.h"
        "BoolTrack.h"
        "CharacterTrack.h"
        "ConsoleTrack.h"
        "CryMovie.h"
        "CVarNode.h"
        "EntityNode.h"
        "EventTrack.h"
        "ExprTrack.h"
        "MaterialNode.h"
        "Movie.h"
        "MusicTrack.h"
        "SceneNode.h"
        "ScriptVarNode.h"
        "SelectTrack.h"
        "SequenceIt.h"
        "smartptr.h"
        "SoundTrack.h"
        "Spline.h"
        "StdAfx.h"
)

target_include_directories(CryMovie PRIVATE ../CryCommon)
target_compile_definitions(CryMovie PRIVATE _RELEASE NDEBUG WIN64 WIN32 _AMD64_ _WINDOWS _USRDLL CRYMOVIE_EXPORTS DONT_USE_CRY_MEMORY_MANAGER)
target_compile_options(CryMovie PRIVATE "-fpermissive")
target_link_libraries(CryMovie -static)