add_library(CryNetwork STATIC
        "../PunkBuster/pbcl.cpp"
        "../PunkBuster/pbmd5.cpp"
        "../PunkBuster/pbsdk.cpp"
        "../PunkBuster/pbsv.cpp"
        "CCPEndpoint.cpp"
        "Client.cpp"
        "ClientLocal.cpp"
        "ClientStateMachine.cpp"
        "CompressionHelper.cpp"
        "CryNetwork.cpp"
        "CTPEndpoint.cpp"
        "CTPEndpointGNB.cpp"
        "DatagramSocket.cpp"
        "DefenceWall.cpp"
        "NETServerSnooper.cpp"
        "Network.cpp"
        "PunkBusterInterface.cpp"
        "RConSystem.cpp"
        "Server.cpp"
        "ServerSlot.cpp"
        "ServerSnooper.cpp"
        "ServerStateMachine.cpp"
        "StaticCharCompressor.cpp"
        "StdAfx.cpp"
        "../PunkBuster/pbcl.h"
        "../PunkBuster/pbcommon.h"
        "../PunkBuster/pbmd5.h"
        "../PunkBuster/pbsdk.h"
        "../PunkBuster/pbsv.h"
        "CCPEndpoint.h"
        "Client.h"
        "ClientLocal.h"
        "ClientStateMachine.h"
        "CNP.h"
        "CompressionHelper.h"
        "CTPEndpoint.h"
        "CTPEndpointGNB.h"
        "DatagramSocket.h"
        "DefenceWall.h"
        "Interfaces.h"
        "NETServerSnooper.h"
        "Network.h"
        "PingCalculator.h"
        "PunkBusterInterface.h"
        "RConSystem.h"
        "Server.h"
        "ServerSlot.h"
        "ServerSnooper.h"
        "ServerStateMachine.h"
        "StateMachine.h"
        "StaticCharCompressor.h"
        "StdAfx.h"
)

target_compile_definitions(CryNetwork PRIVATE _RELEASE NDEBUG WIN64 WIN32 _AMD64_ _WINDOWS _USRDLL CRYNETWORK_EXPORTS NOT_USE_UBICOM_SDK DONT_USE_CRY_MEMORY_MANAGER FAR_CRY_STATIC_LIBS)
target_link_libraries(CryNetwork CryCommon ws2_32 -static)