add_library(CryPhysics STATIC
        "aabbtree.cpp"
        "articulatedentity.cpp"
        "boolean2d.cpp"
        "boxgeom.cpp"
        "CryPhysics.cpp"
        "cylindergeom.cpp"
        "geoman.cpp"
        "geometry.cpp"
        "heightfieldbv.cpp"
        "heightfieldgeom.cpp"
        "intersectionchecks.cpp"
        "linunprojectionchecks.cpp"
        "livingentity.cpp"
        "matrixnm.cpp"
        "obbtree.cpp"
        "overlapchecks.cpp"
        "particleentity.cpp"
        "physicalentity.cpp"
        "physicalplaceholder.cpp"
        "physicalworld.cpp"
        "qhull.cpp"
        "raybv.cpp"
        "raygeom.cpp"
        "rigidbody.cpp"
        "rigidentity.cpp"
        "ropeentity.cpp"
        "rotunprojectionchecks.cpp"
        "singleboxtree.cpp"
        "softentity.cpp"
        "spheregeom.cpp"
        "StdAfx.cpp"
        "trimesh.cpp"
        "utils.cpp"
        "wheeledvehicleentity.cpp"
        "aabbtree.h"
        "articulatedentity.h"
        "boxgeom.h"
        "bvtree.h"
        "cylindergeom.h"
        "geoman.h"
        "geometries.h"
        "geometry.h"
        "heightfieldbv.h"
        "heightfieldgeom.h"
        "intersectionchecks.h"
        "IPhysics.h"
        "livingentity.h"
        "matrixnm.h"
        "obbtree.h"
        "overlapchecks.h"
        "particleentity.h"
        "physicalentity.h"
        "physicalplaceholder.h"
        "physicalworld.h"
        "polynomial.h"
        "quotient.h"
        "raybv.h"
        "raygeom.h"
        "rigidbody.h"
        "rigidentity.h"
        "ropeentity.h"
        "singleboxtree.h"
        "softentity.h"
        "spheregeom.h"
        "StdAfx.h"
        "trimesh.h"
        "unprojectionchecks.h"
        "utils.h"
        "vectorn.h"
        "wheeledvehicleentity.h"
)

target_compile_definitions(CryPhysics PRIVATE _RELEASE NDEBUG WIN64 WIN32 _AMD64_ _WINDOWS _USRDLL PHYSICS_EXPORTS DONT_USE_CRY_MEMORY_MANAGER FAR_CRY_STATIC_LIBS)
target_link_libraries(CryPhysics CryCommon -static)