add_library(CryScriptSystem STATIC
        "CryScriptSystem.cpp"
        "FunctionHandler.cpp"
        "LuaCryPakIO.cpp"
        "LUA/lapi.c"
        "LUA/lcode.c"
        "LUA/ldebug.c"
        "LUA/ldo.c"
        "LUA/lfunc.c"
        "LUA/lgc.c"
        "LUA/lib/lauxlib.c"
        "LUA/lib/lbaselib.c"
        "LUA/lib/lbitlib.c"
        "LUA/lib/ldblib.c"
        "LUA/lib/liolib.c"
        "LUA/lib/lmathlib.c"
        "LUA/lib/lstrlib.c"
        "LUA/llex.c"
        "LUA/lmem.c"
        "LUA/lobject.c"
        "LUA/lopcodes.c"
        "LUA/lparser.c"
        "LUA/lstate.c"
        "LUA/lstring.c"
        "LUA/ltable.c"
        "LUA/ltests.c"
        "LUA/ltm.c"
        "LUA/lundump.c"
        "LUA/lvm.c"
        "LUA/lzio.c"
        "MemStats.cpp"
        "RecycleAllocator.cpp"
        "ScriptBuffer.cpp"
        "ScriptObject.cpp"
        "ScriptSystem.cpp"
        "StdAfx.cpp"
        "vectorlib.c"
        "FunctionHandler.h"
        "LuaCryPakIO.h"
        "LUA/lapi.h"
        "LUA/lauxlib.h"
        "LUA/lcode.h"
        "LUA/ldebug.h"
        "LUA/ldo.h"
        "LUA/lfunc.h"
        "LUA/lgc.h"
        "LUA/llex.h"
        "LUA/llimits.h"
        "LUA/lmem.h"
        "LUA/lobject.h"
        "LUA/lopcodes.h"
        "LUA/lparser.h"
        "LUA/lstate.h"
        "LUA/lstring.h"
        "LUA/ltable.h"
        "LUA/ltm.h"
        "LUA/lua.h"
        "LUA/luadebug.h"
        "LUA/lualib.h"
        "LUA/lundump.h"
        "LUA/lvm.h"
        "LUA/lzio.h"
        "RecycleAllocator.h"
        "ScriptObject.h"
        "ScriptSystem.h"
        "StackGuard.h"
        "StdAfx.h"
)

target_include_directories(CryScriptSystem PRIVATE ./LUA)
target_link_libraries(CryScriptSystem CryCommon)