add_library(CrySoundSystem SHARED
        "ADPCMDecoder.cpp"
        "CrySoundSystem.cpp"
        "MusicPattern.cpp"
        "MusicPatternInstance.cpp"
        "MusicSystem.cpp"
        "OGGDecoder.cpp"
        "PCMDecoder.cpp"
        "RandGen.cpp"
        "Sound.cpp"
        "SoundBuffer.cpp"
        "SoundSystem.cpp"
        "SoundSystemCommon.cpp"
        "StdAfx.cpp"
        "ADPCMDecoder.h"
        "DummyMusic.h"
        "DummySound.h"
        "MusicLoadSink.h"
        "MusicPattern.h"
        "MusicPatternInstance.h"
        "MusicSystem.h"
        "OGGDecoder.h"
        "OggVorbisInclude/ogg/ogg.h"
        "OggVorbisInclude/ogg/os_types.h"
        "OggVorbisInclude/vorbis/codec.h"
        "OggVorbisInclude/vorbis/vorbisenc.h"
        "OggVorbisInclude/vorbis/vorbisfile.h"
        "PatternDecoder.h"
        "PCMDecoder.h"
        "RandGen.h"
        "Sound.h"
        "SoundBuffer.h"
        "SoundSystem.h"
        "SoundSystemCommon.h"
        "StdAfx.h"
)

target_include_directories(CrySoundSystem PRIVATE ../CryCommon ./OggVorbisInclude)
target_compile_definitions(CrySoundSystem PRIVATE _RELEASE NDEBUG WIN64 WIN32 _AMD64_ _WINDOWS _USRDLL CRYSOUNDSYSTEM_EXPORTS DONT_USE_CRY_MEMORY_MANAGER)
target_compile_options(CrySoundSystem PRIVATE "-fpermissive")